# tts-tool

./: .env.example  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/tts_tool/: cache.py  chunk.py  cli.py  clone.py  record.py  record_interactive.py  stitch.py  synthesize.py  tail_extract.py
tests/: test_cache.py  test_chunk.py  test_cli.py  test_clone.py  test_record.py  test_record_interactive.py  test_stitch.py  test_synthesize.py  test_tail_extract.py
