[project]
name = "tts-tool"
version = "0.1.0"
description = "CleanText (stdin) -> MP3 via Fish Audio TTS."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jonathan Moregard", email = "jonathan.more@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fish-audio-sdk>=1.3,<2",
    "spacy>=3.7,<4",
    "en-core-web-sm",
    "platformdirs>=4.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
tts-tool = "tts_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_tool"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
